--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,7 @@ section {
 
 p {
   text-wrap: wrap;
+  font-style: italic;
 }
 
 /*Styles for Contact section Start*/
@@ -91,11 +92,6 @@ p {
   display: inline-block;
   margin: auto;
   padding: 2%;
-}
-@media screen and (min-width: 350px){
-    .contacts ul {
-        display:block;
-    }
 }
 
 /*Styles for Contact section End*/
@@ -146,6 +142,19 @@ flex: 1 0 150px;
 .cont02 {
     flex: 1 0 150px;
    
+}
+@media screen and (max-width:768px) {
+
+    .flex-container {
+        display: flex;
+        flex-direction: column;
+    }
+    .container02 {
+        margin-left: 0;
+    }
+    .text-block01, .text-block02 {
+        margin-bottom: 40px;
+    }
 }
 
 .overlay:hover {
@@ -216,8 +225,12 @@ html {
 
 /* adding media query to contacts */
 @media screen and (max-width:768px){
-.contacts ul li {
+.contacts ul {
 flex-direction: column;
+}
+section {
+    display: flex;
+    flex-direction: column;
 }
 }
     
